--- a/css/style.css
+++ b/css/style.css
@@ -233,3 +233,11 @@ nav a {
       text-align: center;
     }
   }
+  .loader {
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #ff5e14;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+  }
